--- a/1-4.html
+++ b/1-4.html
@@ -16,9 +16,10 @@
     </div>
 
     <div class="main">
+      <div class="sidebar-left"></div>
       <div class="blog"></div>
-      <div class="sidebar"></div>
-      
+      <div class="sidebar-right"></div>
+
     </div>
 
 
